typewriter efecto, AboutMe y Footer hechos, Experiencia creado y mejorado. Estilos CSS mejor, react-scroll

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.pene {
-  background-image: url("./assets/screenshots/defaultScreenshot.webp");
+html{
+  scroll-behavior: smooth;
 }
 
 .responsive-padding{
