--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,46 @@ html{
 .nav-bar-hover:hover{
   width: 100%;
 }
+
+.epic-gradient{
+  background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
+}
+
+.soft-shadow{
+  box-shadow: -1px 0px 9px 1px rgba(0,0,0,0.75);
+  -webkit-box-shadow: -1px 0px 9px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 0px 9px 1px rgba(0,0,0,0.75);
+}
+
+/* --------------------FONTS------------------ */
+
+.kanit-light {
+  font-family: "Kanit", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.kanit-light-italic {
+  font-family: "Kanit", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+
+.manrope-font {
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+
+h2{
+  font-family: "Fredoka", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: italic;
+  font-variation-settings: "width" 100;
+}
