imagenes en ImgBB, projects grid y mejor padding y slider responsive(offsetWidth)

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ html{
 
 .grid-projects{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min-content, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 }
 
 /* --------------------FONTS------------------ */
